Adding lead time for each story.

--- a/custom_chart.html
+++ b/custom_chart.html
@@ -23,11 +23,15 @@
             'Name':        { key: 'Name',           center: false },
             'Estimate':    { key: 'PlanEstimate',   center: true },
             'Created':     { key: 'CreatedDate',    center: true, date: true },
+            'Defined':     { key: 'DefinedDate',    center: true, date: true },
             'Started':     { key: 'StartedDate',    center: true, date: true },
             'Completed':   { key: 'CompletedDate',  center: true, date: true },
             'Accepted':    { key: 'AcceptedDate',   center: true, date: true },
-            'Released':    { key: 'ReleasedDate',   center: true, date: true}
+            'Released':    { key: 'ReleasedDate',   center: true, date: true },
+            'Backtracks':  { key: 'BackCount',      center: true },
+            'Lead Time':   { key: 'LeadTime',       center: true }
           },
+          total_lead_ms: 0,
 
           launch: function() {
             this._mask = new Ext.LoadMask(Ext.getBody(), {
@@ -153,8 +157,7 @@
               return o.Name;
             });
 
-            // Make the type more readable.
-            // Color the row based on the type.
+            // Make the type more readable and color the row based on the type.
             if (story._type == 'hierarchicalrequirement') {
               story._type = 'S';
               story.color = '#ffffff';
@@ -169,57 +172,75 @@
             }
 
             // Calculate the transition dates.
-            var created, started, completed, accepted, released;
+            var dates = [null, null, null, null, null, null];
+            var indices = [null, 'Defined', 'In-Progress', 'Completed', 'Accepted', 'Released'];
+            var back_count = 0;
+            var back_flag = false;
             story.Revisions.forEach(function(r) {
               if (r.Description == 'Original revision') {
-                created = r.CreationDate;
+                dates[0] = r.CreationDate;
               } else {
                 var m = r.Description
                   .match(/SCHEDULE STATE changed from \[(.*?)\] to \[(.*?)\]/);
 
-                if (m) {
-                  if (m[2] == 'Idea') {
-                    started = null;
-                    completed = null;
-                    accepted = null;
-                    released = null;
-                  } else if (m[2] == 'Defined') {
-                    started = null;
-                    completed = null;
-                    accepted = null;
-                    released = null;
-                  } else if (m[2] == 'In-Progress') {
-                    started = r.CreationDate;
-                    completed = null;
-                    accepted = null;
-                    released = null;
-                  } else if (m[2] == 'Completed') {
-                    completed = r.CreationDate;
-                    accepted = null;
-                    released = null;
-                  } else if (m[2] == 'Accepted') {
-                    accepted = r.CreationDate;
-                    released = null;
-                  } else if (m[2] == 'Released') {
-                    released = r.CreationDate;
+                if (m && indices.indexOf(m[2]) >= 0) {
+                  var i = indices.indexOf(m[2]);
+                  dates[i] = r.CreationDate;
+                  for (var j = i + 1; j < indices.length; j += 1) {
+                    if (!back_flag && dates[j]) {
+                      back_count += 1;
+                      back_flag = true;
+                    }
+                    dates[j] = null;
                   }
+                  back_flag = false;
                 }
               }
             });
-            if (created) {
-              story.CreatedDate = created;
+            if (dates[0]) {
+              story.CreatedDate = dates[0];
             }
-            if (started) {
-              story.StartedDate = started;
+            if (dates[1]) {
+              story.DefinedDate = dates[1];
             }
-            if (completed) {
-              story.CompletedDate = completed;
+            if (dates[2]) {
+              story.StartedDate = dates[2];
             }
-            if (accepted) {
-              story.AcceptedDate = accepted;
+            if (dates[3]) {
+              story.CompletedDate = dates[3];
             }
-            if (released) {
-              story.ReleasedDate = released;
+            if (dates[4]) {
+              story.AcceptedDate = dates[4];
+            }
+            if (dates[5]) {
+              story.ReleasedDate = dates[5];
+            }
+            story.BackCount = back_count;
+
+            // Calculate lead time.
+            if (story.StartedDate && story.ReleasedDate) {
+              var lead_ms = story.ReleasedDate - story.StartedDate;
+              this.total_lead_ms += lead_ms;
+
+              var lead_hours = Math.floor(lead_ms / 1000 / 60 / 60);
+              var lead_days = Math.floor(lead_hours / 24);
+              lead_hours -= (lead_days * 24);
+
+              story.LeadTime = '';
+              if (lead_days > 0) {
+                story.LeadTime += lead_days;
+                if (lead_days == 1) {
+                  story.LeadTime += ' day, ';
+                } else {
+                  story.LeadTime += ' days, ';
+                }
+              }
+              story.LeadTime += lead_hours;
+              if (lead_hours == 1) {
+                story.LeadTime += ' hour';
+              } else {
+                story.LeadTime += ' hours';
+              }
             }
 
             // Process the next story.
@@ -228,8 +249,13 @@
             if (raw_stories.length > 0) {
               this.get_story_data(raw_stories, stories);
             } else {
-              this.build_table(stories);
+              this.calculate_statistics(stories);
             }
+          },
+
+          // Calculate the overall statistics for the entire table.
+          calculate_statistics: function(stories) {
+            this.build_table(stories);
           },
 
           // Construct the HTML table to display the story data.
